--- a/index.html
+++ b/index.html
@@ -7,44 +7,44 @@
         <title>Calculator</title>
     </head>
     <body>
-        <div>
+        <div id="calculator">
             <div id="display">
                 <p></p>
             </div>
             <div id="buttons">
-                <div id="row1">
+                <div class="button-row">
                     <button id="%" type="button">%</button>
                     <button id="CE" type="button">CE</button>
                     <button id="C" type="button">C</button>
                     <button id="Del" type="button">Del</button>
                 </div>
-                <div id="row2">
+                <div class="button-row">
                     <button id="x_inv" type="button">1/x</button>
                     <button id="x^2" type="button">^2</button>
                     <button id="sqrt(" type="button">sqrt()</button>
                     <button id="div" type="button">/</button>
                 </div>
-                <div id="row3">
-                    <button id="7" type="button">7</button>
-                    <button id="8" type="button">8</button>
-                    <button id="9" type="button">9</button>
+                <div class="button-row">
+                    <button id="7" class="numbers" type="button">7</button>
+                    <button id="8" class="numbers" type="button">8</button>
+                    <button id="9" class="numbers" type="button">9</button>
                     <button id="mul" type="button">*</button>
                 </div>
-                <div id="row4">
-                    <button id="4" type="button">4</button>
-                    <button id="5" type="button">5</button>
-                    <button id="6" type="button">6</button>
+                <div class="button-row">
+                    <button id="4" class="numbers" type="button">4</button>
+                    <button id="5" class="numbers" type="button">5</button>
+                    <button id="6" class="numbers" type="button">6</button>
                     <button id="sub" type="button">-</button>
                 </div>
-                <div id="row5">
-                    <button id="1" type="button">1</button>
-                    <button id="2" type="button">2</button>
-                    <button id="3" type="button">3</button>
+                <div class="button-row">
+                    <button id="1" class="numbers" type="button">1</button>
+                    <button id="2" class="numbers" type="button">2</button>
+                    <button id="3" class="numbers" type="button">3</button>
                     <button id="add" type="button">+</button>
                 </div>
-                <div id="row6">
+                <div class="button-row">
                     <button id="neg" type="button">+/-</button>
-                    <button id="0" type="button">0</button>
+                    <button id="0" class="numbers" type="button">0</button>
                     <button id="." type="button">.</button>
                     <button id="=" type="button">=</button>
                 </div>                
