Working basic operators, numbers, clear, and equals in JS code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="button-row">
                     <button id="x_inv" type="button">1/x</button>
                     <button id="x^2" type="button">^2</button>
-                    <button id="sqrt(" type="button">sqrt()</button>
+                    <button id="sqrt" type="button">sqrt()</button>
                     <button id="div" type="button">/</button>
                 </div>
                 <div class="button-row">
